<resources>
    <!--Main strings-->
    <string name="app_name">FindMe</string>
    <string name="url_server">http://popovvad.ru/</string>
    <string name="url_registration">register.php</string>
    <string name="url_authorization">authorization.php</string>
    <string name="url_refreshCoordinates">refreshCoordinates.php</string>
    <string name="url_UserCoordinates">UserCoordinates.php</string>
    <string name="yandex_map_kit_api_key">0f8d1d87-de3b-4c52-823d-94463b58dae7</string>
    <!--Autorization layout-->
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="tittle_login">Авторизация</string>
    <string name="placeholder_login">Логин</string>
    <string name="placeholder_password">Пароль</string>
    <string name="boolean_recall">Запомнить</string>
    <string name="action_reg">Регистрация</string>
    <string name="action_login">Войти</string>
    <!--Map layout-->
    <string name="toolbar_tittle">Местоположение пользователя: </string>
    <!--Navigation drawler-->
    <string name="drawer_open">Открыть</string>
    <string name="drawer_close">Закрыть</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Меню действий</string>
    <string name="nav_header_subtitle">Воспользуйтесь поиском или списком контактов</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- ==================== Navigation drawler menu-->
    <string name="action_settings">Настройки</string>
    <string name="action_search">Найти друга</string>
    <string name="action_contacts">Список друзей</string>
    <string name="action_exit">Выйти</string>
    <string name="group_search">Обратная связь</string>
    <string name="action_send">Сообщить об ошибке</string>
    <string name="action_faq">Инструкция пользователя</string>
    <!--Activity search-->
    <string name="onMap">Показать на карте</string>
    <string name="noticeSearch">Введите имя контакта</string>
    <!--Contact-->
    <string name="contactName">Имя контакта</string>
    <string name="city">Населенный пункт</string>
    <string name="country">Страна</string>
    <string name="coordinates">Координаты</string>
    <string name="newContact">Добавить в контакты</string>
    <string name="findOnMap">Показать на карте</string>
    <string name="contact_point_text">empty</string>
</resources>
