<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/captionContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textlines"
            android:gravity="center_horizontal"
            android:text="@string/contactName"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/captionCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textlines"
            android:gravity="center_horizontal"
            android:text="@string/country"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/captionCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textlines"
            android:gravity="center_horizontal"
            android:text="@string/city"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/captionCoordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textlines"
            android:gravity="center_horizontal"
            android:text="@string/coordinates"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button"
                android:text="@string/findOnMap"
                android:textSize="18sp"
                tools:text="@string/findOnMap" />

            <Button
                android:id="@+id/buttonNewContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:text="@string/newContact"
                android:textSize="18sp"
                tools:text="@string/newContact" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>